my video fetched

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10477,3 +10477,33 @@ a.text-dark:focus {
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+.video-container {
+  width: 500px;
+  height: 380px;
+  margin: 0 auto;
+  border: 2px solid #645cff;
+  position: relative;
+  -webkit-box-shadow: 1px 1px 11px #9e9e9e;
+          box-shadow: 1px 1px 11px #9e9e9e;
+}
+
+.video-container .my-video {
+  width: 130px;
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  border: 6px solid #2196f3;
+  z-index: 2;
+}
+
+.video-container .user_video {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
