--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,14 +1,40 @@
-
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
 // Variables
 @import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.video-container {
+  width: 500px;
+  height: 380px;
+  margin: 0 auto;
+  border: 2px solid #645cff;
+  position: relative;
+  box-shadow: 1px 1px 11px #9e9e9e;
+
+  .my-video {
+    width: 130px;
+    position: absolute;
+    left: 10px;
+    bottom: 10px;
+    border: 6px solid #2196f3;
+    z-index: 2;
+  }
+
+  .user_video {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
 }
